--- a/pi/TrackPoint/src/aplication/cliente/ListarCliente.form
+++ b/pi/TrackPoint/src/aplication/cliente/ListarCliente.form
@@ -41,8 +41,11 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="tblListarCliente">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="d1" red="ae" type="rgb"/>
+            </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="3" rowCount="4">
+              <Table columnCount="3" rowCount="0">
                 <Column editable="false" title="CPF" type="java.lang.Object"/>
                 <Column editable="false" title="Nome" type="java.lang.Object"/>
                 <Column editable="false" title="CEP" type="java.lang.Object"/>
