--- a/pi/TrackPoint/src/aplication/pedido/ListarPedido.form
+++ b/pi/TrackPoint/src/aplication/pedido/ListarPedido.form
@@ -40,6 +40,9 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="tblListar">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="d1" red="ae" type="rgb"/>
+            </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="5" rowCount="0">
                 <Column editable="false" title="Id_pedido" type="java.lang.Object"/>
